--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>xuan9237.github.io</title>
 </head>
 <body>
     <h3>學號：U1033049</h3>
     <h3>姓名：李佳軒</h3>
+    <a href="https://xuan9237.github.io/enter.html" class="btn btn-outline-secondary btn-lg text-decoration-none">回上一頁</a>
 </body>
 </html>
