--- a/index.htm
+++ b/index.htm
@@ -1138,7 +1138,7 @@
                     <button class="btn btn-outline-dark btn-lg" style="font-weight: bold;" onclick="showc()">C++</button>
                     <button class="btn btn-outline-dark btn-lg" style="font-weight: bold;" onclick="showbcb()">BCB</button>
                     <button class="btn btn-outline-dark btn-lg" style="font-weight: bold;" onclick="showphp()">PHP</button>
-                    <button class="btn btn-outline-dark btn-lg" style="font-weight: bold;" onclick="showthesis()">PHP</button>
+                    <button class="btn btn-outline-dark btn-lg" style="font-weight: bold;" onclick="showthesis()">專題</button>
                 </div>
             </div>
         </div>
