Update output message to greet with 'Goodbye World'

--- a/index.htm
+++ b/index.htm
@@ -390,7 +390,7 @@
                         <p id="big">在這裡，您可以了解更多關於我的事</p>
                         <p id="big">請隨意瀏覽我的網站，希望您能找到有趣內容</p>
                         <p id="big">若想了解更多，也歡迎追蹤我的IG或FB</p>
-                        <p id="big">記得要先登入IG帳號才可以看到喔！</p><br><br><br>
+                        <p id="big">記得要先登入IG帳號才可以看到喔！</p><br><br><br><br>
                     </div>
                 </div>
             </div>
@@ -1164,5 +1164,6 @@
     </div>
 </body>
 </html>
+
 
 
